--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,6 +580,13 @@ About Me Page
     margin-bottom: 20px;
 }
 
+.blog-image img {
+    width: 100%;
+    max-height: 500px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+
 .custom-container {
     display: flex;
     justify-content: center;
