--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,9 +423,10 @@ Custom Cards
     flex: 0 0 300px;
     display: flex;
     flex-direction: column;
-    height: 300px;
-    background-image: linear-gradient(45deg, #1f1e2d, #1c192f);
-    padding: 32px;
+    height: 280px;
+    background: #000;
+    padding: 12px;
+    border: 1px solid #002f86;
     box-shadow: -5px 0 16px 32px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
     transition: transform 250ms;
@@ -448,24 +449,6 @@ Custom Cards
     color: #777777;
     margin-bottom: 3px;
     font-size: 14px;
-}
-
-.project-card-date strong {
-    color: #d4d4d4;
-}
-
-.project-card-title {
-    font-size: 26px;
-    color: #fff;
-    text-decoration: none;
-}
-
-.project-card-footer {
-    margin-top: auto;
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-    color: #fff;
 }
 
 .project-card-image {
@@ -605,7 +588,8 @@ Media queries
     }
 
     .heading-content h2 {
-        font-size: 22px;
+        font-size: 36px;
+        font-weight: 600;
     }
 
     .list-inline-item {
@@ -729,61 +713,4 @@ Contact Me
 
 .btn-submit:hover {
     background-color: #4833c6;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.card {
-    flex: 1;
-    max-width: calc(25% - 20px);
-    margin: 10px;
-    background-color: #ffffff;
-    padding: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.card h3 {
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-.card p {
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 15px;
-}
-
-.card .btn {
-    background-color: #0063F6;
-    color: #fff;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.card .btn:hover {
-    background-color: #004fcb;
 }
